# cloud-energy

./: .gitignore  .gitmodules  Dockerfile.cloud-energy  Dockerfile.cloud-energy-asciicharts  LICENSE  README.md  auto_detect.py  hyperparameter_tuning.py  interact_validation.py  linear_model.py  model.py  ols.py  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt  xgb.py  xgboost_model.py
.github/: dependabot.yml
.github/workflows/: main.yml  tests.yml
data/: spec_data.csv  spec_data_cleaned_unmelted.csv
data/cpu_arch/: intel-broadwell.csv  intel-coffeelake.csv  intel-ivybridge.csv
data/cpu_spec_sheets/: Intel_ARK_ComparisonChart_2022_09_03_60_amount.html  Intel_ARK_ComparisonChart_2022_09_03___450_amount.html  Intel_ARK_ComparisonChart_2022_09_03_discontinued_357.html  amd.csv
demo-reporter/: cpu-utilization.c  static-binary
raw/html/: power_ssj2008-20071128-00001.html  power_ssj2008-20071128-00004.html  power_ssj2008-20071128-00005.html  power_ssj2008-20071128-00013.html  power_ssj2008-20071129-00018.html  power_ssj2008-20071207-00024.html  power_ssj2008-20080115-00027.html  power_ssj2008-20080115-00029.html  power_ssj2008-20080116-00034.html  power_ssj2008-20080212-00035.html  power_ssj2008-20080311-00041.html  power_ssj2008-20080506-00050.html  power_ssj2008-20080519-00054.html  power_ssj2008-20080519-00055.html  power_ssj2008-20080519-00057.html  (+276 more)
scripts/: create_data_csv.py  data_cleaning.py  spec_data.csv
src/: auto_detect.py  interact_validation.py  run_model.py
tests/: validate-default.sh  validate-params.sh
(+1160 files in other folders)
