[tool.poetry]
name = "spec-power-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
optuna = "3.5.0"
pandas = "2.2.0"
scipy = "1.12.0"
xgboost = "2.0.3"
psutil = "5.9.8"
pyarrow = "15.0.0"
scikit-learn = "1.4.1.post1"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
